fixed text align

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -101,6 +101,7 @@ h4.title {
     background-repeat: no-repeat;
     background-size: contain;
     border: 0px;
+    vertical-align: middle;
 }
 
 .file-button {
@@ -181,13 +182,16 @@ h4.title {
     color: rgba(80, 80, 80, 0.6);
     font-size: 10px;
     width: 80px;
-    height: 50px;
-    margin-top: 40px;
+    height: 40px;
+    margin-top: 20px;
     margin-left: 5px;
     float: left;
     text-align: center;
-    vertical-align: center;
+    vertical-align: middle;
     word-wrap: break-word;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: table-cell;
 }
 
 #file-label-text {
